// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Index page Renders auth Exists 1`] = `<Query />`;

exports[`Index page Renders auth Query Data 1`] = `
<Home
  data="Test Data"
/>
`;

exports[`Index page Renders auth Query Error 1`] = `
<div>
  Test Error
</div>
`;

exports[`Index page Renders auth Query Loading 1`] = `
<div>
  Loading...
</div>
`;

exports[`Index page Renders unauth 1`] = `
<div>
  <div
    role="navigation"
  >
    <Link
      prefetch={true}
      route="auth/sign-in"
    >
      <a>
        Sign In
      </a>
    </Link>
  </div>
  <div
    role="main"
  >
    <h1>
      Hello World
    </h1>
    <div>
      This will be the landing page for Condor Club.
    </div>
  </div>
</div>
`;
